@@ -26,7 +26,7 @@ public interface HasId extends Serializable {
 	public static final Comparator<HasId> HAS_ID_COMPARATOR = new Comparator<HasId>() {
 		@Override
 		public int compare(HasId o1, HasId o2) {
-			return new Long(o1.getId()).compareTo(o2.getId());
+			return Long.valueOf(o1.getId()).compareTo(o2.getId());
 		}
 	};
 
