@@ -625,7 +625,7 @@ public class JSONArray {
 	 * @return this.
 	 */
 	public JSONArray put(int value) {
-		put(new Integer(value));
+		put(Integer.valueOf(value));
 		return this;
 	}
 
@@ -696,7 +696,7 @@ public class JSONArray {
 	 *             If the index is negative.
 	 */
 	public JSONArray put(int index, int value) throws JSONException {
-		put(index, new Integer(value));
+		put(index, Integer.valueOf(value));
 		return this;
 	}
 
@@ -714,7 +714,7 @@ public class JSONArray {
 	 *             If the index is negative.
 	 */
 	public JSONArray put(int index, long value) throws JSONException {
-		put(index, new Long(value));
+		put(index, Long.valueOf(value));
 		return this;
 	}
 
@@ -776,7 +776,7 @@ public class JSONArray {
 	 * @return this.
 	 */
 	public JSONArray put(long value) {
-		put(new Long(value));
+		put(Long.valueOf(value));
 		return this;
 	}
 
