@@ -291,7 +291,7 @@ public class JSONObject {
 			if (b == '0' && s.length() > 2
 					&& (s.charAt(1) == 'x' || s.charAt(1) == 'X')) {
 				try {
-					return new Integer(Integer.parseInt(s.substring(2), 16));
+					return Integer.valueOf(Integer.parseInt(s.substring(2), 16));
 				} catch (Exception ignore) {
 				}
 			}
@@ -300,9 +300,9 @@ public class JSONObject {
 						|| s.indexOf('E') > -1) {
 					return Double.valueOf(s);
 				} else {
-					Long myLong = new Long(s);
+					Long myLong = Long.valueOf(s);
 					if (myLong.longValue() == myLong.intValue()) {
-						return new Integer(myLong.intValue());
+						return Integer.valueOf(myLong.intValue());
 					} else {
 						return myLong;
 					}
@@ -1236,7 +1236,7 @@ public class JSONObject {
 	 *             If the key is null.
 	 */
 	public JSONObject put(String key, int value) throws JSONException {
-		put(key, new Integer(value));
+		put(key, Integer.valueOf(value));
 		return this;
 	}
 
@@ -1252,7 +1252,7 @@ public class JSONObject {
 	 *             If the key is null.
 	 */
 	public JSONObject put(String key, long value) throws JSONException {
-		put(key, new Long(value));
+		put(key, Long.valueOf(value));
 		return this;
 	}
 
