@@ -520,7 +520,7 @@ public class BoundTable extends AbstractTableWidget implements HasChunks {
             }
         }
 
-        boolean odd = (this.calculateRowToObjectOffset(new Integer(row))
+        boolean odd = (this.calculateRowToObjectOffset(Integer.valueOf(row))
                            .intValue() % 2) != 0;
         this.table.getRowFormatter().setStyleName(row, odd ? "odd" : "even");
 
@@ -619,7 +619,7 @@ public class BoundTable extends AbstractTableWidget implements HasChunks {
         }
 
         //GWT.log( "Returning object instance index: "+row, null);
-        return new Integer(row);
+        return Integer.valueOf(row);
     }
 
     /**
@@ -701,7 +701,7 @@ public class BoundTable extends AbstractTableWidget implements HasChunks {
             if (this.selectedRowStyles != null) {
                 removeRows.addAll(this.selectedRowStyles.keySet());
             } else {
-                removeRows.add(new Integer(this.selectedRowLastIndex));
+                removeRows.add(Integer.valueOf(this.selectedRowLastIndex));
             }
 
             for (int i = removeRows.size() - 1; i >= 0; i--) {
@@ -963,14 +963,14 @@ public class BoundTable extends AbstractTableWidget implements HasChunks {
             }
         } else if (this.selectedRowLastIndex != -1) {
             realIndexes.add(calculateRowToObjectOffset(
-                    new Integer(this.selectedRowLastIndex)));
+                    Integer.valueOf(this.selectedRowLastIndex)));
         }
 
         int i = 0;
 
         for (Iterator it = this.topBinding.getChildren().iterator();
                 it.hasNext(); i++) {
-            if (realIndexes.contains(new Integer(i))) {
+            if (realIndexes.contains(Integer.valueOf(i))) {
                 selected.add(((Binding) ((Binding) it.next()).getChildren()
                                          .get(0)).getRight().object);
             } else {
@@ -1009,7 +1009,7 @@ public class BoundTable extends AbstractTableWidget implements HasChunks {
                     (this.selectedRowLastIndex != -1) &&
                     (this.selectedRowLastIndex == (row - 1))) ||
                     ((this.selectedRowStyles != null) &&
-                    this.selectedRowStyles.containsKey(new Integer(row - 1)))) {
+                    this.selectedRowStyles.containsKey(Integer.valueOf(row - 1)))) {
                 return;
             }
 
@@ -1229,7 +1229,7 @@ public class BoundTable extends AbstractTableWidget implements HasChunks {
 
     private void insertNestedWidget(int row) {
         //GWT.log( "Inserting nested for row "+row, null);
-        Integer realIndex = this.calculateRowToObjectOffset(new Integer(row));
+        Integer realIndex = this.calculateRowToObjectOffset(Integer.valueOf(row));
 
         //GWT.log( "RealIndex: "+ realIndex, null );
         int i = 0;
@@ -1289,7 +1289,7 @@ public class BoundTable extends AbstractTableWidget implements HasChunks {
             Integer entryRow = (Integer) entry.getKey();
 
             if (entryRow.intValue() > fromRow) {
-                newSelectedRowStyles.put(new Integer(entryRow.intValue() +
+                newSelectedRowStyles.put(Integer.valueOf(entryRow.intValue() +
                         modifier), entry.getValue());
             } else {
                 newSelectedRowStyles.put(entryRow, entry.getValue());
@@ -1563,11 +1563,11 @@ public class BoundTable extends AbstractTableWidget implements HasChunks {
         if ((this.masks & BoundTable.MULTIROWSELECT_MASK) > 0) {
             if ((((masks & BoundTable.MULTI_REQUIRES_SHIFT) > 0) == shiftDown)) {
                 //TOGGLE ROW.
-                if (this.selectedRowStyles.containsKey(new Integer(row))) {
+                if (this.selectedRowStyles.containsKey(Integer.valueOf(row))) {
                     //Handle Widget remove on Multirow
                     this.getRowFormatter()
                         .setStyleName(row,
-                        (String) this.selectedRowStyles.remove(new Integer(row)));
+                        (String) this.selectedRowStyles.remove(Integer.valueOf(row)));
 
                     if ((this.masks & BoundTable.INSERT_WIDGET_MASK) > 0) {
                         this.removeNestedWidget(row);
@@ -1577,7 +1577,7 @@ public class BoundTable extends AbstractTableWidget implements HasChunks {
                     lastStyle = ((lastStyle == null) ||
                         (lastStyle.length() == 0)) ? BoundTable.DEFAULT_STYLE
                                                    : lastStyle;
-                    this.selectedRowStyles.put(new Integer(row), lastStyle);
+                    this.selectedRowStyles.put(Integer.valueOf(row), lastStyle);
                     this.getRowFormatter().setStyleName(row, "selected");
 
                     if ((this.masks & BoundTable.INSERT_WIDGET_MASK) > 0) {
